--- a/styles/simditor.css
+++ b/styles/simditor.css
@@ -1,7 +1,7 @@
 /*!
 * Simditor v2.3.6
 * http://simditor.tower.im/
-* 2015-12-21
+* 2017-05-31
 */
 @font-face {
   font-family: 'Simditor';
@@ -190,6 +190,7 @@
   top: 0;
   left: 0;
   z-index: 2;
+  display: none !important;
 }
 .simditor .simditor-wrapper .simditor-image-loading .progress {
   width: 100%;
@@ -237,6 +238,44 @@
 }
 .simditor .simditor-body img {
   cursor: pointer;
+}
+.simditor .simditor-body img.uploading {
+  font-size: 0px;
+  padding-bottom: 4px;
+  background: repeating-linear-gradient(to right, #c6e8ef 0%, #3da0dc 50%, #c6e8ef 100%);
+  animation: 1s SimditorImgUploadingAnimate ease infinite;
+}
+@keyframes SimditorImgUploadingAnimate {
+  10% {
+    background: repeating-linear-gradient(to right, #c6e8ef 10%, #3da0dc 60%, #c6e8ef 110%);
+  }
+  20% {
+    background: repeating-linear-gradient(to right, #c6e8ef 20%, #3da0dc 70%, #c6e8ef 120%);
+  }
+  30% {
+    background: repeating-linear-gradient(to right, #c6e8ef 30%, #3da0dc 80%, #c6e8ef 130%);
+  }
+  40% {
+    background: repeating-linear-gradient(to right, #c6e8ef 40%, #3da0dc 90%, #c6e8ef 140%);
+  }
+  50% {
+    background: repeating-linear-gradient(to right, #c6e8ef 50%, #3da0dc 100%, #c6e8ef 150%);
+  }
+  60% {
+    background: repeating-linear-gradient(to right, #c6e8ef 60%, #3da0dc 110%, #c6e8ef 160%);
+  }
+  70% {
+    background: repeating-linear-gradient(to right, #c6e8ef 70%, #3da0dc 120%, #c6e8ef 170%);
+  }
+  80% {
+    background: repeating-linear-gradient(to right, #c6e8ef 80%, #3da0dc 130%, #c6e8ef 180%);
+  }
+  90% {
+    background: repeating-linear-gradient(to right, #c6e8ef 90%, #3da0dc 140%, #c6e8ef 190%);
+  }
+  100% {
+    background: repeating-linear-gradient(to right, #c6e8ef 100%, #3da0dc 150%, #c6e8ef 200%);
+  }
 }
 .simditor .simditor-body img.selected {
   box-shadow: 0 0 0 4px #cccccc;
@@ -536,6 +575,9 @@
 .simditor .simditor-popover .settings-field label {
   display: inline-block;
   margin: 0 5px 0 0;
+}
+.simditor .simditor-popover .settings-field label.auto {
+  width: auto !important;
 }
 .simditor .simditor-popover .settings-field input[type=text] {
   display: inline-block;
